# libapn

./: .gitignore  AUTHORS  ChangeLog  INSTALL  Makefile.am  README  TODO  configure.ac
examples/: Makefile.am  search_compressing.cpp  search_function.cpp  search_involution.cpp  search_permutation.cpp
results/: log.5bits.deg2.2uni.txt  log.5bits.deg2.4uni.txt  log.5bits.deg2.apn.txt
src/: Makefile.am  apn.h  common.h  function.h  involution.h  linear_function.h  linear_permutation.h  permutation.h
utils/: lowDegree_relations.cpp
